--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,32 @@
         <section id="prac1">
             <h2>Практична робота №1</h2>
             <p>Тут буде розклад занять на місяць.</p>
-            <!-- Додайте таблицю або інший вміст тут -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>День</th>
+                        <th>Час</th>
+                        <th>Предмет</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Понеділок</td>
+                        <td>9:00</td>
+                        <td>Інформатика</td>
+                    </tr>
+                    <tr>
+                        <td>Вівторок</td>
+                        <td>10:00</td>
+                        <td>Математика</td>
+                    </tr>
+                    <tr>
+                        <td>Середа</td>
+                        <td>11:00</td>
+                        <td>Фізика</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section id="prac2">
