--- a/Index.html
+++ b/Index.html
@@ -3,60 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практична робота №1</title>
+    <title>Тижневий розклад</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Мій навчальний сайт</h1>
-        <nav>
-            <ul>
-                <li><a href="#prac1">Практична робота №1</a></li>
-                <li><a href="#prac2">Практична робота №2</a></li>
-            </ul>
-        </nav>
+        <h1>Тижневий розклад занять</h1>
     </header>
 
     <main>
-        <section id="prac1">
-            <h2>Практична робота №1</h2>
-            <p>Тут буде розклад занять на місяць.</p>
+        <section id="schedule">
+            <h2>Розклад на тиждень (09.12.2024 - 12.12.2024)</h2>
+            
+            <!-- Понеділок -->
+            <h3>Понеділок</h3>
             <table>
                 <thead>
                     <tr>
-                        <th>День</th>
                         <th>Час</th>
                         <th>Предмет</th>
+                        <th>Аудиторія</th>
+                        <th>Викладач</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Понеділок</td>
-                        <td>9:00</td>
-                        <td>Інформатика</td>
+                        <td>11:45 - 13:20</td>
+                        <td>ПРО-2017 [Лк]</td>
+                        <td>Дистанц.</td>
+                        <td>Торошанко Я.І.</td>
                     </tr>
                     <tr>
-                        <td>Вівторок</td>
-                        <td>10:00</td>
-                        <td>Математика</td>
+                        <td>13:30 - 15:05</td>
+                        <td>WEB тех.-2016 [Лк]</td>
+                        <td>Дистанц.</td>
+                        <td>Аронов А.О.</td>
                     </tr>
                     <tr>
-                        <td>Середа</td>
-                        <td>11:00</td>
-                        <td>Фізика</td>
+                        <td>15:15 - 16:50</td>
+                        <td>ШІ-2017 [Лк]</td>
+                        <td>Дистанц.</td>
+                        <td>Кисіль Т.М.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- Вівторок -->
+            <h3>Вівторок</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Час</th>
+                        <th>Предмет</th>
+                        <th>Аудиторія</th>
+                        <th>Викладач</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>09:45 - 11:20</td>
+                        <td>ПРО-2017 [Лб]</td>
+                        <td>Дистанц.</td>
+                        <td>Торошанко Я.І.</td>
+                    </tr>
+                    <tr>
+                        <td>11:45 - 13:20</td>
+                        <td>ХТ-15 [Зач]</td>
+                        <td>Дистанц.</td>
+                        <td>Шикула О.М.</td>
+                    </tr>
+                    <tr>
+                        <td>13:30 - 15:05</td>
+                        <td>МЗШІ-2020 [Пз]</td>
+                        <td>Дистанц.</td>
+                        <td>Звенигородський О.С.</td>
+                    </tr>
+                    <tr>
+                        <td>15:15 - 16:50</td>
+                        <td>ДТМІ-2018 [Зач]</td>
+                        <td>ауд. 205</td>
+                        <td>Асєєва Л.А.</td>
+                    </tr>
+                    <tr>
+                        <td>17:00 - 18:35</td>
+                        <td>ЗВВБ-2017 [Зач]</td>
+                        <td>ауд. 205</td>
+                        <td>Чатченко О.Є.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- Середа -->
+            <h3>Середа</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Час</th>
+                        <th>Предмет</th>
+                        <th>Аудиторія</th>
+                        <th>Викладач</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>09:45 - 11:20</td>
+                        <td>ШІ-2017 [Зач]</td>
+                        <td>ауд. 223</td>
+                        <td>Кисіль Т.М.</td>
+                    </tr>
+                    <tr>
+                        <td>11:45 - 13:20</td>
+                        <td>WEB тех.-2016 [Пз]</td>
+                        <td>Дистанц.</td>
+                        <td>Аронов А.О.</td>
+                    </tr>
+                    <tr>
+                        <td>13:30 - 15:05</td>
+                        <td>WEB тех.-2016 [Пз]</td>
+                        <td>Дистанц.</td>
+                        <td>Аронов А.О.</td>
+                    </tr>
+                    <tr>
+                        <td>15:15 - 16:50</td>
+                        <td>WEB тех.-2016 [Зач]</td>
+                        <td>ауд. 519</td>
+                        <td>Аронов А.О.</td>
+                    </tr>
+                    <tr>
+                        <td>17:00 - 18:35</td>
+                        <td>МЗШІ-2020 [Зач]</td>
+                        <td>ауд. 205</td>
+                        <td>Звенигородський О.С.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- Четвер -->
+            <h3>Четвер</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Час</th>
+                        <th>Предмет</th>
+                        <th>Аудиторія</th>
+                        <th>Викладач</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>13:30 - 15:05</td>
+                        <td>ПРО-2017 [Лб]</td>
+                        <td>Дистанц.</td>
+                        <td>Торошанко Я.І.</td>
+                    </tr>
+                    <tr>
+                        <td>15:15 - 16:50</td>
+                        <td>ПРО-2017 [Лк]</td>
+                        <td>Дистанц.</td>
+                        <td>Торошанко Я.І.</td>
+                    </tr>
+                    <tr>
+                        <td>17:00 - 18:35</td>
+                        <td>ПРО-2017 [Лк]</td>
+                        <td>Дистанц.</td>
+                        <td>Торошанко Я.І.</td>
                     </tr>
                 </tbody>
             </table>
         </section>
-
-        <section id="prac2">
-            <h2>Практична робота №2</h2>
-            <p>Тут буде інша інформація.</p>
-        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Ваше ім'я або назва університету</p>
+        <p>&copy; 2024 Державний університет інформаційно-комунікаційних технологій </p>
     </footer>
 </body>
 </html>
