--- a/Index.html
+++ b/Index.html
@@ -3,178 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тижневий розклад</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Особистий вебсайт Красавіна Владислава</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- Заголовок сторінки -->
     <header>
-        <h1>Тижневий розклад занять</h1>
+        <h1>Сайт для WEB-технології</h1>
     </header>
 
-    <main>
-        <section id="schedule">
-            <h2>Розклад на тиждень (09.12.2024 - 12.12.2024)</h2>
-            
-            <!-- Понеділок -->
-            <h3>Понеділок</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Час</th>
-                        <th>Предмет</th>
-                        <th>Аудиторія</th>
-                        <th>Викладач</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>11:45 - 13:20</td>
-                        <td>ПРО-2017 [Лк]</td>
-                        <td>Дистанц.</td>
-                        <td>Торошанко Я.І.</td>
-                    </tr>
-                    <tr>
-                        <td>13:30 - 15:05</td>
-                        <td>WEB тех.-2016 [Лк]</td>
-                        <td>Дистанц.</td>
-                        <td>Аронов А.О.</td>
-                    </tr>
-                    <tr>
-                        <td>15:15 - 16:50</td>
-                        <td>ШІ-2017 [Лк]</td>
-                        <td>Дистанц.</td>
-                        <td>Кисіль Т.М.</td>
-                    </tr>
-                </tbody>
-            </table>
+    <!-- Меню навігації -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about_me.html">Про мене</a></li>
+            <li><a href="pr.html">Практичні роботи</a></li>
+            <li><a href="lab.html">Лабораторні заняття</a></li>
+        </ul>
+    </nav>
 
-            <!-- Вівторок -->
-            <h3>Вівторок</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Час</th>
-                        <th>Предмет</th>
-                        <th>Аудиторія</th>
-                        <th>Викладач</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>09:45 - 11:20</td>
-                        <td>ПРО-2017 [Лб]</td>
-                        <td>Дистанц.</td>
-                        <td>Торошанко Я.І.</td>
-                    </tr>
-                    <tr>
-                        <td>11:45 - 13:20</td>
-                        <td>ХТ-15 [Зач]</td>
-                        <td>Дистанц.</td>
-                        <td>Шикула О.М.</td>
-                    </tr>
-                    <tr>
-                        <td>13:30 - 15:05</td>
-                        <td>МЗШІ-2020 [Пз]</td>
-                        <td>Дистанц.</td>
-                        <td>Звенигородський О.С.</td>
-                    </tr>
-                    <tr>
-                        <td>15:15 - 16:50</td>
-                        <td>ДТМІ-2018 [Зач]</td>
-                        <td>ауд. 205</td>
-                        <td>Асєєва Л.А.</td>
-                    </tr>
-                    <tr>
-                        <td>17:00 - 18:35</td>
-                        <td>ЗВВБ-2017 [Зач]</td>
-                        <td>ауд. 205</td>
-                        <td>Чатченко О.Є.</td>
-                    </tr>
-                </tbody>
-            </table>
+    <!-- Секція "Про мене" -->
+    <section id="about">
+        <h2>Про мене</h2>
+        <img src="style/imeg/ava2.png" alt="Фото студента" class="profile-pic">
+        <p><strong>Валерій Дубінін</strong></p>
+        <p><strong>Контактні дані:</strong> email@example.com</p>
+        <p>Я студент 4 курсу кафедри комп'ютерної інженерії, хочу отримати за цей проект задовільну оцінку.</p>
 
-            <!-- Середа -->
-            <h3>Середа</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Час</th>
-                        <th>Предмет</th>
-                        <th>Аудиторія</th>
-                        <th>Викладач</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>09:45 - 11:20</td>
-                        <td>ШІ-2017 [Зач]</td>
-                        <td>ауд. 223</td>
-                        <td>Кисіль Т.М.</td>
-                    </tr>
-                    <tr>
-                        <td>11:45 - 13:20</td>
-                        <td>WEB тех.-2016 [Пз]</td>
-                        <td>Дистанц.</td>
-                        <td>Аронов А.О.</td>
-                    </tr>
-                    <tr>
-                        <td>13:30 - 15:05</td>
-                        <td>WEB тех.-2016 [Пз]</td>
-                        <td>Дистанц.</td>
-                        <td>Аронов А.О.</td>
-                    </tr>
-                    <tr>
-                        <td>15:15 - 16:50</td>
-                        <td>WEB тех.-2016 [Зач]</td>
-                        <td>ауд. 519</td>
-                        <td>Аронов А.О.</td>
-                    </tr>
-                    <tr>
-                        <td>17:00 - 18:35</td>
-                        <td>МЗШІ-2020 [Зач]</td>
-                        <td>ауд. 205</td>
-                        <td>Звенигородський О.С.</td>
-                    </tr>
-                </tbody>
-            </table>
+    </section>
 
-            <!-- Четвер -->
-            <h3>Четвер</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Час</th>
-                        <th>Предмет</th>
-                        <th>Аудиторія</th>
-                        <th>Викладач</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>13:30 - 15:05</td>
-                        <td>ПРО-2017 [Лб]</td>
-                        <td>Дистанц.</td>
-                        <td>Торошанко Я.І.</td>
-                    </tr>
-                    <tr>
-                        <td>15:15 - 16:50</td>
-                        <td>ПРО-2017 [Лк]</td>
-                        <td>Дистанц.</td>
-                        <td>Торошанко Я.І.</td>
-                    </tr>
-                    <tr>
-                        <td>17:00 - 18:35</td>
-                        <td>ПРО-2017 [Лк]</td>
-                        <td>Дистанц.</td>
-                        <td>Торошанко Я.І.</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
+    <!-- Секція "Практичні роботи" -->
+    <section id="practicals">
+        <h2>Практичні роботи</h2>
+        <ul>
+            <li><a href="index.html">Практичне заняття №1</a> – Створення головної сторінки</li>
+            <li><a href="pr2/pr2.html">Практичне заняття №2</a> – Реєстранційна форма</li>
+            <li><a href="pr3/pr3.html">Практичне заняття №3</a> – Створення кнопки</li>
+            <li><a href="pr4/pr4.html">Практичне заняття №4</a> – Головна сторінка YouTub</li>
+            <li><a href="pr5/pr5.html">Практичне заняття №5</a> – Сторінка планера</li>
+            <li><a href="pr6/pr6.html">Практичне заняття №6</a> – Довільна анімація спрайтів покемонів</li>
+            <li><a href="pr7/pr7.html">Практичне заняття №7</a> – Лендінг сторінка "Одяг"</li>
+            <li><a href="pr8/pr8.html">Практичне заняття №8</a> – Лендінг сторінка "Техніка" з використанням препроцесора CSS</li>
+        </ul>
+    </section>
 
+    <!-- Секція "Лабораторні заняття" -->
+    <section id="labs">
+        <h2>Лабораторні заняття</h2>
+        <ul>
+            <p>пусто</p>
+        </ul>
+    </section>
+
+    <!-- Футер -->
     <footer>
-        <p>&copy; 2024 Державний університет інформаційно-комунікаційних технологій </p>
+        <p>© 2024 Красавін Влад</p>
+        <p>
+            <strong>Соціальні мережі:</strong> 
+            <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
+        </p>
     </footer>
 </body>
 </html>
